CRUD pdf and swagger
