# routes/api/register.js
@@ -5,16 +5,17 @@ const UserController = require('./../../db/controllers/user');
 
 router.post('/', (req, res) => {
 	LOG.debug('Register user', req.body.nick);
-	UserController.findByNickAndPass(req.body.nick, req.body.password)
-		.then(user => {
-			if(!utils.isNullOrEmptyOrUndefined(user)) {
-				LOG.error('Register fail: user is in db');
-				return res.status(ERRORS.USER_REGISTERED.status).send(ERRORS.USER_REGISTERED);
-			}
-            UserController.saveUser(req.body);
+	UserController.isRegister(req.body.nick, req.body.password)
+		.then(() => {
+			UserController.saveUser(req.body)
+				.then(() => {
+					return res.status(201).send();
+				}).catch((err) => {
+					return res.status(err.status).send(err);
+				});
 		})
-		.catch(() => {
-			return res.status(ERRORS.GENERAL.status).send(ERRORS.GENERAL);
+		.catch((err) => {
+			return res.status(err.status).send(err);
 		});
 });
 
